# GEMCAT

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: package.yml  python-app.yml  python-package.yml  test.yml
pyreporter/: AdjacencyTransformation.py  Expression.py  Model.py  PageRank.py  __init__.py  cli.py  io.py  regexes.py  utils.py  verification.py  workflows.py
src/gemcat/: __init__.py  adjacency_transformation.py  cli.py  expression.py  io.py  model.py  model_manager.py  ranking.py  utils.py  workflows.py
src/prankme/: AdjacencyTransformation.py  Expression.py  Model.py  PageRank.py  cli.py  expression.py  io.py  ranking.py  utils.py  verification.py  workflows.py
tests/: conftest.py  fixtures.py  test.ipynb  test2.ipynb  test_adjacency_calculation.py  test_basic_dependencies.py  test_cli.py  test_expression.py  test_io.py  test_model.py  test_model_manager.py  test_pagerank.py  test_sanity_checks.py  test_seeds.py  test_utils.py  test_verification.py  test_workflows.py
tests/test_models/: .gitattributes  .gitignore  Recon3D.json  Recon3D_301.json  Recon3D_301.xml  create_test_models.ipynb  create_test_models.py  highly_connected.json  mini.json  mini.xml  mini_complex_gpr.json  mini_complex_gpr.xml  mini_complex_gpr_gid_version.json  mini_complex_gpr_gid_version.xml  mini_redox.json  mini_redox.xml  mini_reversible.json  mini_reversible.xml  seeds_test.csv  stoichiometry_trp.csv
tests/test_results/: uc.csv
tests/test_seq/: .gitattributes  expression_mini.csv  hek293_rnaseq.csv  prot_uc_vs_healthy.csv  prot_uc_vs_healthy_gid.csv
